[add] add item to inventory
