# docs/swagger.yaml
@@ -386,6 +386,31 @@ paths:
       summary: Get user's inventory.
       tags:
       - inventories
+    post:
+      consumes:
+      - application/json
+      description: Add item to user inventories
+      parameters:
+      - description: item id that you want to add
+        in: query
+        name: item_id
+        required: true
+        type: string
+      - description: item type that you want to add [avatar]
+        in: query
+        name: item_type
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/utils.DataResponse'
+      summary: Add item to inventories
+      tags:
+      - inventories
   /users/reset-password:
     put:
       consumes:
